# fastapi_app

./: .env  .gitignore  load_data_elastic.py  main.py  models.py  pyproject.toml  search_data_elastic.py  testing.py
auth/: auth.py  database.py  schemas.py
files/: skillfactory_zaprosy_na_obuchenie_15.01.2024-21.01.2024_LLM
files/Росбанк/: rosbank_14.03.2024-14.03.2024_fullday_LLM
model/: models.py
