[tool.poetry]
name = "analytics-app"
version = "0.1.0"
description = ""
authors = ["Refreshian <alexmisis@alexmisis.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
